# bibwizard

./: .env.example  .gitignore  README.md  pyproject.toml  test_cite_cases.md  test_cite_cases_v2.md
benchmark/: README.md  author_map.html  compare.py  content_map.html  ground_truth.json  results.md  results2.md  results3.md
bibwizard/: __init__.py  cli.py
bibwizard/context/: content_map.py  reference_map.py  visualize.py
bibwizard/database/: migrations.py  models.py  queries.py
bibwizard/ingestion/: ads.py  embedder.py  llm_extract.py  metadata.py  parser.py  structure.py
bibwizard/llm/: chat.py  client.py  prompts.py  router.py  summarizer.py  tools.py
bibwizard/output/: __init__.py  bibtex.py
bibwizard/search/: __init__.py  cite_search.py  paper_search.py  reranker.py
bibwizard/utils/: __init__.py  config.py  display.py  wizard_spinner.py
