[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bibwizard"
version = "0.1.0"
description = "bibwizard — a local-first, LLM-powered research paper manager"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yared" }]
keywords = ["research", "papers", "llm", "rag", "ollama", "deepseek", "bibwizard"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.30",
    "chromadb>=0.5.0",
    "pymupdf>=1.24.0",
    "networkx>=3.3",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "requests>=2.32.0",
    "feedparser>=6.0.11",
    "tenacity>=8.3.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
# Opt-in cross-encoder reranker for cite_finder. Brings torch as a transitive
# dep (~1GB). Without this extra, cite_finder falls back to the built-in
# lexical reranker which is zero-cost but lower quality.
rerank = [
    "sentence-transformers>=3.0.0",
]

[project.scripts]
bibwizard = "bibwizard.cli:app"

[project.urls]
Homepage = "https://github.com/yaredreinarz/bibwizard"
Issues = "https://github.com/yaredreinarz/bibwizard/issues"

[tool.setuptools.packages.find]
include = ["bibwizard*"]

[tool.ruff]
line-length = 100
target-version = "py311"
